--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "dependencies": {
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "swiper": "^3.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "jquery": "^3.3.1",
+    "mockjs": "^1.0.1-beta3",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
   }
 }
