--- a/warm-nest-master/package.json
+++ b/warm-nest-master/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.9.2",
     "distpicker": "^2.0.4",
     "jquery": "^3.3.1",
     "react": "^16.5.0",
